--- a/style.css
+++ b/style.css
@@ -1,22 +1,48 @@
 * {
 background-color: rgb(255, 255, 255);
 font-family: Helvetica, "Lucida Console", Fantasy;
-box-sizing:content-box;
+box-sizing: border-box;
 }
 
-.recipes {
-font-size: 20px;
+.h1 {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+a {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+ul li{
+    display: inline-flex;
+    list-style: none;
+}
+
+.lasagna,.swepie,.sallad {
+    border: solid 3px black;
+}
+
+.lasagna {
+
+}
+
+.swepie {
+
+}
+
+.sallad {
+ 
 }
 
 .big,
 #pop {    
-    font-size: 32px;
+    font-size: 15px;
     color:rgb(0, 0, 0);
 }
 
 .pic1 {
-width: 200px;
-margin: auto;
-border: 0.5em double black;
-display: flex;
+    width: 125px;
+    border: 0.5em double black;
+    margin-top: 5em;
+    display: flex;
 }
